--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,16 @@ url = "https://artefact.skao.int/repository/pypi-internal/simple"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-astroplan = "^0.8"
 astropy = "^5.1"
 numpy = "^1.23.4"
+katpoint = "^0.10"
 
 # optional dependencies; used by "extras"
 #python-casacore = "^3.5.1"
-#[tool.poetry.extras]
+pyuvdata = "^2.2.12"
+[tool.poetry.extras]
 #python-casacore = ["python-casacore"]
+pyuvdata = ["pyuvdata"]
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
