--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,21 @@ url = "https://artefact.skao.int/repository/pypi-internal/simple"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-astroplan = "^0.8"
 astropy = "^5.1"
-numpy = "^1.23.4"
+# numpy version set to be compatible with RASCIL
+numpy = "^1.23, <1.24"
+pandas = "^1.5.0"
+katpoint = "^0.10"
+katdal = "^0.20.1"
+scikits-fitting = "^0.7"
 
 # optional dependencies; used by "extras"
-#python-casacore = "^3.5.1"
-#[tool.poetry.extras]
-#python-casacore = ["python-casacore"]
+python-casacore = "^3.5.1"
+pyuvdata = "^2.2.12"
+
+[tool.poetry.extras]
+python-casacore = ["python-casacore"]
+pyuvdata = ["pyuvdata"]
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
