ORC-1546: add oci image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ include:
   # Run python jobs
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/python.gitlab-ci.yml'
-#  - project: 'ska-telescope/templates-repository'
-#    file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
   # Include documentation
 #  - project: 'ska-telescope/templates-repository'
 #    file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
