--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,17 +16,17 @@ python = "^3.9"
 astropy = "^5.1"
 numpy = "^1.23, <1.24"
 pandas = "^1.5"
+matplotlib="^3.6"
 katpoint = "^0.10"
 katdal = "^0.20"
 scikits-fitting = "^0.7"
+pyuvdata = "^2.2"
 
 # optional dependencies; used by "extras"
 python-casacore = {version = "^3.5", optional = true}
-pyuvdata = {version="^2.2", optional = true}
 
 [tool.poetry.extras]
 python-casacore = ["python-casacore"]
-pyuvdata = ["pyuvdata"]
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
