--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ include:
 #  - project: 'ska-telescope/templates-repository'
 #    file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
   # Include documentation
-#  - project: 'ska-telescope/templates-repository'
-#    file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
 #  - project: 'ska-telescope/templates-repository'
 #    file: 'gitlab-ci/includes/release.gitlab-ci.yml'
   # Run finalizer, inc. ci-metrics
