--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
-docutils<0.18
-sphinx == 5.1.1
-sphinx-autodoc-typehints == 1.19.1
+#sphinx related packages
+docutils
+sphinx
+sphinx-autodoc-typehints
 sphinx-automodapi
 sphinx-rtd-theme
 typing_extensions
