ORC-1546: Updated the .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,13 +15,11 @@ include:
   # Run python jobs
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/python.gitlab-ci.yml'
-#  - project: 'ska-telescope/templates-repository'
-#    file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
   # Include documentation
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
-#  - project: 'ska-telescope/templates-repository'
-#    file: 'gitlab-ci/includes/release.gitlab-ci.yml'
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/release.gitlab-ci.yml'
   # Run finalizer, inc. ci-metrics
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
