--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "SKA SDP Pointing Offset Calibration Pipeline"
 authors = ["SKA SDP Developers"]
 license = "BSD-3 Clause"
 repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-wflow-pointing-offset"
-#documentation = "https://developer.skao.int/projects/ska-sdp-wflow-pointing-offset/en/latest/"
+documentation = "https://developer.skao.int/projects/ska-sdp-wflow-pointing-offset/en/latest/"
 
 [[tool.poetry.source]]
 name = "ska"
@@ -23,7 +23,8 @@ scikits-fitting = "^0.7"
 pyuvdata = "^2.2"
 
 # optional dependencies; used by "extras"
-python-casacore = "^3.5.1"
+python-casacore = {version = "^3.5", optional = true}
+
 [tool.poetry.extras]
 python-casacore = ["python-casacore"]
 
