--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,13 @@ name = "ska"
 url = "https://artefact.skao.int/repository/pypi-internal/simple"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-astropy = "^5.1"
+python = ">=3.9, <3.11"
 numpy = "^1.23, <1.24"
 matplotlib="^3.6"
 katpoint = "^0.10"
-katdal = "^0.20"
 scikits-fitting = "^0.7"
 pyuvdata = "^2.2"
+rascil = { git = "https://gitlab.com/ska-telescope/external/rascil-main.git", branch = "master"}
 
 # optional dependencies; used by "extras"
 python-casacore = {version = "^3.5", optional = true}
