--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,14 @@ name = "ska"
 url = "https://artefact.skao.int/repository/pypi-internal/simple"
 
 [tool.poetry.dependencies]
-python = ">=3.9, <3.11"
+python = "^3.9"
 numpy = "^1.23, <1.24"
 matplotlib="^3.6"
 katpoint = "^0.10"
 scikits-fitting = "^0.7"
 pyuvdata = "^2.2"
-rascil = { git = "https://gitlab.com/ska-telescope/external/rascil-main.git", branch = "master"}
+ska-sdp-datamodels = { git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-datamodels.git", branch = "orc-1644-refactor-rascil-visibility"}
+ska-sdp-func-python = { git  = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func-python.git", branch = "main"}
 
 # optional dependencies; used by "extras"
 python-casacore = {version = "^3.5", optional = true}
