--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ matplotlib = "^3.6"
 katpoint = "^0.10"
 scikits-fitting = "^0.7"
 pyuvdata = "^2.2"
+uncertainties = "^3.1.7"
 ska-sdp-datamodels = "^0.2.1"
 ska-sdp-func-python = "^0.2.1"
 docopt = "^0.6"
