--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ scikits-fitting = "^0.7"
 pyuvdata = "^2.2"
 uncertainties = "^3.1.7"
 ska-sdp-datamodels = "^0.2.1"
-ska-sdp-func-python = "^0.2.1"
+ska-sdp-func-python = { git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func-python.git", branch = "orc-1646-gain-solver-fix"}
 docopt = "^0.6"
 
 # optional dependencies; used by "extras"
